bases/managers/mylar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar
  annotations:
    k3s.reynn.net/resource-profiile: small
spec:
  selector:
    matchLabels:
      app: mylar
  template:
    metadata:
      labels:
        app: mylar
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k3s.io/hostname
                    operator: In
                    values:
                      - mimikyu
      containers:
        - name: mylar
          image: linuxserver/mylar3
          resources: {}
          ports:
            - containerPort: 8090
              name: tcp-server
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /comics
              name: comics
      volumes:
        - name: comics
          hostPath:
            path: /media/deadpool/comics
            type: DirectoryOrCreate
        - name: config
          persistentVolumeClaim:
            claimName: mylar-config
