bases/managers/mylar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mylar
spec:
  type: ClusterIP
  selector:
    app: mylar
  ports:
    - name: tcp-ui
      port: 8090
